add picture descriptions

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 </div>
                 <ul class="timeline">
                     <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/fees1.jpg" alt="" /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/fees1.jpg" alt="a picture of a landscape with mountains" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>Pay & Go</h4>
@@ -198,7 +198,7 @@
                         </div>
                     </li>
                     <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/fees2.jpg" alt="" /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/fees2.jpg" alt="a picture of a stem" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>Starter Pack</h4>
@@ -208,7 +208,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/fees3.jpg" alt="" /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/fees3.jpg" alt="a picture of a dune" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>Members Plan</h4>
@@ -218,7 +218,7 @@
                         </div>
                     </li>
                     <li class="timeline-inverted">
-                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/fees4.jpg" alt="" /></div>
+                        <div class="timeline-image"><img class="rounded-circle img-fluid" src="assets/img/about/fees4.jpg" alt="a picture of waves" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>Free Pass</h4>
