--- a/team.html
+++ b/team.html
@@ -53,7 +53,7 @@
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="" />
+                            <img class="mx-auto rounded-circle" src="assets/img/team/1.jpg" alt="a face of a blond woman with a white t-shirt" />
                             <h4>Anne Yovinski</h4>
                             <p class="text-muted">Karate Teacher</p>
                             <a class="btn btn-dark btn-social mx-2" href="https://twitter.com" target="_blank" rel="noreferrer noopener"><i class="fab fa-twitter"></i></a>
@@ -63,7 +63,7 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/2.jpg" alt="" />
+                            <img class="mx-auto rounded-circle" src="assets/img/team/2.jpg" alt="a face of a men with a white t-shirt" />
                             <h4>James Doland</h4>
                             <p class="text-muted">Aikido Teacher</p>
                             <a class="btn btn-dark btn-social mx-2" href="https://twitter.com" target="_blank" rel="noreferrer noopener"><i class="fab fa-twitter"></i></a>
@@ -73,7 +73,7 @@
                     </div>
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="" />
+                            <img class="mx-auto rounded-circle" src="assets/img/team/3.jpg" alt="a face of a men with a navy t-shirt" />
                             <h4>Marcus Phelan</h4>
                             <p class="text-muted">Jiu-Jitsu Teacher</p>
                             <a class="btn btn-dark btn-social mx-2" href="https://twitter.com" target="_blank" rel="noreferrer noopener"><i class="fab fa-twitter"></i></a>
@@ -248,7 +248,7 @@
                                     <!-- Activity Details Go Here-->
                                     <h2 class="text-uppercase">Karate</h2>
                                     <p class="item-intro text-muted">Shotokan</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/01-full.jpg" alt="" />
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/karate.jpg" alt="a men and a woman laying on the floor with martial arts clothes and grappling." />
                                     <p>Shotokan is a style of karate, founded in 1938 and developed from various martial arts by Gichin Funakoshi and his son Gigo Funakoshi. Karate practice strengthens the mind, develops composure, a clearer thought process, deeper insight into one's mental capabilities, and more self-confidence.</p>
                                     <ul class="list-inline">
                                         <li>April 2021</li>
@@ -277,7 +277,7 @@
                                     <!-- Activity Details Go Here-->
                                     <h2 class="text-uppercase">Aikido</h2>
                                     <p class="item-intro text-muted">Aikikai</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/02-full.jpg" alt="" />
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/aikido.jpg" alt="a men in a white martial arts kimono holding two black clubs doing a martial arts posture." />
                                     <p>The Aikikai is the original school of Aikido and was founded in 1948. It is centered on the Aikikai Foundation in Japan, and its figurehead is the Doshu (the family heir of the founder of Aikido).</p>
                                     <ul class="list-inline">
                                         <li>Date: April 2021</li>
@@ -308,7 +308,7 @@
                                     <!-- Activity Details Go Here-->
                                     <h2 class="text-uppercase">Jiu-Jitsu</h2>
                                     <p class="item-intro text-muted">Gi/No Gi</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/03-full.jpg" alt="" />
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/jiujitsu.jpg" alt="two young men standing in front of each other with martial art gear made of neopren and they are about to fight." />
                                     <p>Jiu-Jitsu is a self-defence martial art and combat sport based on grappling and submission holds. It focuses on the skill of taking an opponent to the ground, controlling one's opponent, gaining a dominant position and using a number of techniques to force them into submission via joint locks or chokeholds.</p>
                                     <ul class="list-inline">
                                         <li>Date: May 2021</li>
@@ -339,7 +339,7 @@
                                     <!-- Activity Details Go Here-->
                                     <h2 class="text-uppercase">Kids Classes</h2>
                                     <p class="item-intro text-muted">Classes for the little ones of our family</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/04-full.jpg" alt="" />
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/kids.jpg" alt="a kid with a white martial arts kimono raising his toe and hands while doing a martial arts posture." />
                                     <p>Our kids classes are designed for the little ones in our families. There is many benefits of practicing Martial Arts from early stages in our lives. The kids will have the opportunity to socialize while learning a new skill.</p>
                                     <ul class="list-inline">
                                         <li>Date: April 2021</li>
@@ -370,7 +370,7 @@
                                     <!-- Activity Details Go Here-->
                                     <h2 class="text-uppercase">Women</h2>
                                     <p class="item-intro text-muted">Growing community for women in MA</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/05-full.jpg" alt="" />
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/women.jpg" alt="a woman standing up wearing martial arts white clothes and a black belt and she is doing a martial art posture." />
                                     <p>We are a growing community of more than 200 women in Martial Arts. In this space you will start, continue and master your skills in a challenging and motivating environment.</p>
                                     <ul class="list-inline">
                                         <li>Date: January 2020</li>
@@ -401,7 +401,7 @@
                                     <!-- Activity Details Go Here-->
                                     <h2 class="text-uppercase">Bootcamp</h2>
                                     <p class="item-intro text-muted">Prepare your next competition with us</p>
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/06-full.jpg" alt="" />
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/bootcamp.jpg" alt="two man with white martial arts kimonos grappling on the floor while the teacher watches." />
                                     <p>Join our Boot-Camps and be ready for your next competition with our best trainers and methodologies. During this intensive trainings you will have the opportunity to prepare your next competitions directly with our best teachers and experts in the field.</p>
                                     <ul class="list-inline">
                                         <li>Date: January 2020</li>
