--- a/team.html
+++ b/team.html
@@ -284,11 +284,9 @@
                                         <li>Mon - Sat: 2pm - 8pm</li>
                                         <li>Category: Aikido</li>
                                     </ul>
-                                    <a href="./registration.html">
-                                        <button class="btn btn-primary" type="button">
-                                            Register
-                                        </button>
-                                    </a>
+                                    <button class="btn btn-primary" type="button" onclick="location.href = 'registration.html';">
+                                        Register
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -315,11 +313,9 @@
                                         <li>Mon - Sat: 10am - 7pm</li>
                                         <li>Category: Jiu-Jitsu</li>
                                     </ul>
-                                    <a href="./registration.html">
-                                        <button class="btn btn-primary" type="button">
-                                            Register
-                                        </button>
-                                    </a>
+                                    <button class="btn btn-primary" type="button" onclick="location.href = 'registration.html';">
+                                        Register
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -346,11 +342,9 @@
                                         <li>Mon - Sat: 10am - 5pm</li>
                                         <li>Category: Kids Classes</li>
                                     </ul>
-                                    <a href="./registration.html">
-                                        <button class="btn btn-primary" type="button">
-                                            Register
-                                        </button>
-                                    </a>
+                                    <button class="btn btn-primary" type="button" onclick="location.href = 'registration.html';">
+                                        Register
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -377,11 +371,9 @@
                                         <li>Mon - Sat: 8am - 10am</li>
                                         <li>Category: Martial Arts</li>
                                     </ul>
-                                    <a href="./registration.html">
-                                        <button class="btn btn-primary" type="button">
-                                            Register
-                                        </button>
-                                    </a>
+                                    <button class="btn btn-primary" type="button" onclick="location.href = 'registration.html';">
+                                        Register
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -408,11 +400,9 @@
                                         <li>Mon - Sat: 8am - 10am</li>
                                         <li>Category: Bootcamp</li>
                                     </ul>
-                                    <a href="./registration.html">
-                                        <button class="btn btn-primary" type="button">
-                                            Register
-                                        </button>
-                                    </a>
+                                    <button class="btn btn-primary" type="button" onclick="location.href = 'registration.html';">
+                                        Register
+                                    </button>
                                 </div>
                             </div>
                         </div>
